# clickhouse-learning

./: pyproject.toml
data/nynta2010_25d/: nynta2010.dbf  nynta2010.shp  nynta2010.shp.xml  nynta2010.shx
python/: benchmark.py  clickhouse.ipynb  download_data.py  moving_avg.py  nyc_taxi_eda.ipynb
sql/: aggr_stats.sql  create.sql  create_avg3d.sql  create_daily_amounts.sql  create_features_targets.sql  create_labels.sql  create_user_trips.sql  generate_backbone.sql  moving_avg_weekly.sql  populate.sql  verify_table.sql
